Implemeted the assignment to work functionally

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mdnext/components": "^0.1.0",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta1",
     "clsx": "^1.1.1",
     "dayjs": "^1.9.8",
     "fast-glob": "^3.2.4",
@@ -37,6 +38,8 @@
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
     "next-seo": "^4.7.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "prism-react-renderer": "^1.1.1",
     "react": "latest",
     "react-dom": "latest",
