--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mdnext/components": "^0.1.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta1",
+    "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "dayjs": "^1.9.8",
     "fast-glob": "^3.2.4",
